[gd_scene load_steps=14 format=3 uid="uid://bchfxguqqtrom"]

[ext_resource type="Script" path="res://App/Scenes/GUI/GUI_BattleMap.gd" id="1_5bjc3"]
[ext_resource type="PackedScene" uid="uid://b1hfuapudwucs" path="res://App/Scenes/GUI/button_hover_text_popout.tscn" id="1_whve4"]
[ext_resource type="Theme" uid="uid://biy6q7375incn" path="res://App/Themes/in_game_ui_theme.tres" id="3_m5uhq"]
[ext_resource type="Script" path="res://App/Scenes/GUI/PauseMenu.gd" id="7_4clcd"]
[ext_resource type="PackedScene" uid="uid://bfbpvnfe42abo" path="res://App/Scenes/GUI/help_system.tscn" id="7_bklfj"]
[ext_resource type="Theme" uid="uid://bagdchotk6suu" path="res://App/Themes/main_menu_theme.tres" id="7_i3wyt"]
[ext_resource type="PackedScene" uid="uid://cnk2y3bx5fsin" path="res://Extras/Scenes/Menus/OptionsMenu/MasterOptionsMenu.tscn" id="8_3jy5q"]
[ext_resource type="PackedScene" uid="uid://b38yju0y20va7" path="res://App/Scenes/GUI/unit_info_popup_card.tscn" id="8_t7xuo"]
[ext_resource type="Texture2D" uid="uid://ds54y6pvtfuco" path="res://Assets/Images/expanded/UI/04_Dialogue_assembled.png" id="9_yom7m"]
[ext_resource type="FontFile" uid="uid://bcsl4f1nq6mwv" path="res://App/Themes/Fonts/Protest_Riot/ProtestRiot-Regular.ttf" id="10_546km"]

[sub_resource type="Animation" id="Animation_4dhjp"]
resource_name = "LevelPassed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(650, 1110), Vector2(650, 290)]
}

[sub_resource type="Animation" id="Animation_kavxa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(650, 1110)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ly10o"]
_data = {
"LevelPassed": SubResource("Animation_4dhjp"),
"RESET": SubResource("Animation_kavxa")
}

[node name="GUI_BattleMap" type="CanvasLayer"]
script = ExtResource("1_5bjc3")

[node name="ButtonHoverTextPopup" parent="." instance=ExtResource("1_whve4")]
unique_name_in_owner = true
offset_top = 0.0
offset_bottom = 128.0

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
theme = ExtResource("3_m5uhq")

[node name="UnitButtons" type="BoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PauseMenu" type="Panel" parent="."]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_i3wyt")
script = ExtResource("7_4clcd")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterOptionsMenu" parent="PauseMenu/VBoxContainer" instance=ExtResource("8_3jy5q")]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 150

[node name="ReturnToGame" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Return to Game
"

[node name="RestartLevel" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Restart Level"

[node name="MainMenuButton" type="Button" parent="PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="HelpSystem" parent="." instance=ExtResource("7_bklfj")]

[node name="UnitInfoCard" parent="." instance=ExtResource("8_t7xuo")]
offset_left = 1596.0
offset_top = -28.0
offset_right = 1596.0
offset_bottom = -28.0

[node name="LevelWin" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="LevelWin"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
offset_left = 650.0
offset_top = 1110.0
offset_right = 1250.0
offset_bottom = 1610.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_yom7m")

[node name="LevelWinLabel" type="Label" parent="LevelWin/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.5
offset_top = -179.0
offset_right = 150.5
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_546km")
theme_override_font_sizes/font_size = 64
text = "Level passed!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="LevelWin/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -179.0
offset_top = -76.0
offset_right = 159.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("10_546km")
theme_override_font_sizes/font_size = 32
text = "You freed all the required critters!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Buttons" type="HBoxContainer" parent="LevelWin/TextureRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -194.0
offset_right = 232.0
offset_bottom = -93.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="NextLevel" type="Button" parent="LevelWin/TextureRect/Buttons"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("7_i3wyt")
text = "Next Level"

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelWin"]
libraries = {
"": SubResource("AnimationLibrary_ly10o")
}

[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/ReturnToGame" to="PauseMenu" method="_on_return_to_game_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/RestartLevel" to="PauseMenu" method="_on_restart_level_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/HBoxContainer/MainMenuButton" to="PauseMenu" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="LevelWin/TextureRect/Buttons/NextLevel" to="." method="_on_next_level_pressed"]
